Change History
==============

0.4 - Unreleased
----------------

- Switch licences to BSD derived. [j23d]
- Use assign slot for widget instead of deprecated rendering. [j23d]

0.3 - 2012-07-19
----------------

- Added a sanitizer to remove a last "/" character of the server_domain. [t2y]
- Fixed the title/description typos for line numbers. [t2y]
- Added test to check if the current username is used for the pad. [j23d]
- Activate translation settings and added title/description for all fields. [t2y]

0.2 - 2012-07-12
----------------

- Update translations. [j23d]
- Use Integer type for border in schema. [j23d]
- Set pad_id directly in the settings. [j23d]


0.2a1 - 2012-07-02
------------------

- Initial version [j23d]